
Changelog
=========

1.0.3 (unreleased)
------------------

- Add .gitignore
  [enfold-josh]


1.0.2 (2015-12-01)
------------------

- Provide a way to still have the functionality, without logging
  [frapell] 


1.0.1 (2015-06-23)
------------------

- Fixes ``AttributeError`` with ``thread._local``, adapt to new ``psutil`` API.
  Ref: http://stackoverflow.com/questions/20640679
  [thet]


1.0.0 (2012-03-29)
------------------

- Add stats info for plone.transformchain applyTransform
  [fafhrd91]

- Add stats info to failure requests.
  [fafhrd91]

0.9.1 (2011-12-01)
------------------

- Add output header detail to README
  [aclark]

- Fix typo
  [jean]

0.9.0 (2011-09-22)
------------------

- Fix docs
  [aclark]

0.8 (2011-09-22)
----------------

- Fix docs
  [aclark]

0.7 (2011-09-22)
----------------

- Initial import from enfold.stats 0.7 tarball
  [aclark]